[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ui.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Ubuntu_Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Ubuntu.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/audioOff.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, -32 ), Vector2( -1280, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 352 ), Vector2( 0, 352 ), Vector2( 0, 384 ), Vector2( 0, 384 ), Vector2( 1280, 384 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 3 )

[node name="ui" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="sound" type="Control" parent="."]
pause_mode = 1
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="sound"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="fade" type="Control" parent="."]
pause_mode = 1
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="ColorRect" parent="fade"]
anchor_right = 1.0
margin_left = -1280.0
margin_top = -32.0
margin_right = -1280.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="ColorRect" parent="fade"]
anchor_right = 1.0
margin_left = 1280.0
margin_top = 384.0
margin_right = 1280.0
margin_bottom = 767.999
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="fade"]
playback_speed = 0.5
anims/play = SubResource( 1 )

[node name="pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="pause"]
margin_left = 448.0
margin_top = 256.0
margin_right = 832.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 217.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="pause/PanelContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
align = 1
valign = 1

[node name="Control" type="Control" parent="pause/PanelContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 370.0
margin_bottom = 43.0

[node name="Control3" type="Control" parent="pause/PanelContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 370.0
margin_bottom = 53.0

[node name="continue" type="Button" parent="pause/PanelContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 370.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 3 )
text = "Continue"

[node name="restart" type="Button" parent="pause/PanelContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 370.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="toMenu" type="Button" parent="pause/PanelContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 370.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 3 )
text = "Back to Menu"
[connection signal="pressed" from="pause/PanelContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="pause/PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pause/PanelContainer/VBoxContainer/toMenu" to="." method="_on_toMenu_pressed"]
